--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,6 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+$primary-color: 
+#444;
+$secondary-color: cyan;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
@@ -26,6 +27,15 @@ $background-opacity: 0.9;
         background: rgba($primary-color, $background-opacity);
       }
     }
+  }
+}
+
+// Set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
   }
 }
 
