--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -84,4 +84,10 @@
     .projects {
         grid-template-columns: 1fr;
     }
+
+    .boxes {
+        div {
+            font-size: 1.2rem;
+        }
+    }
 }
