--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,4 @@
-$primary-color: 
-#444;
+$primary-color: #444;
 $secondary-color: cyan;
 $show-home-image: true;
 $home-image: url("../img/background.jpg");
@@ -17,7 +16,7 @@ $background-opacity: 0.9;
       background-size: cover;
 
       &:after {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         right: 0;
